WIP fixing account listing overflow issues

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -2005,9 +2005,9 @@ $main-content-margin-block-bg-color
 
 .local-wallet-menu {
     // top: 50px!important;
-
     .table-cell {
         display: inline-block;
+        @extend .truncated;
     }
 }
 
